--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "sideEffects": false,
   "scripts": {
     "build": "remix build",
-    "dev": "remix dev"
+    "dev": "remix dev",
+    "start": "remix-serve build",
+    "deploy": "vercel deploy --prod"
   },
   "dependencies": {
     "@remix-run/node": "^1.5.1",
