--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "typescript": "^4.6.4"
   },
   "engines": {
-    "node": ">=14"
+    "node": ">=14",
+    "npm": ">=8",
+    "yarn": "please use npm"
   }
 }
