--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "build": "npm run build:css && remix build",
     "build:css": "tailwindcss -m -i ./styles/app.css -o app/styles/app.css",
     "dev": "concurrently \"npm run dev:css\" \"remix dev\"",
-    "dev:css": "tailwindcss -w -i ./styles/app.css -o app/styles/app.css"
+    "dev:css": "tailwindcss -w -i ./styles/app.css -o app/styles/app.css",
+    "prettier": "prettier --write ."
   },
   "dependencies": {
     "@remix-run/node": "^1.5.1",
@@ -25,6 +26,7 @@
     "concurrently": "^7.2.1",
     "eslint": "^8.15.0",
     "postcss": "^8.4.14",
+    "prettier": "^2.6.2",
     "tailwindcss": "^3.0.24",
     "typescript": "^4.6.4"
   },
