--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint:fix": "eslint --fix ."
   },
   "dependencies": {
+    "@prisma/client": "^3.15.0",
     "@remix-run/node": "^1.5.1",
     "@remix-run/react": "^1.5.1",
     "@remix-run/vercel": "^1.5.1",
@@ -46,6 +47,7 @@
     "lint-staged": "^13.0.0",
     "postcss": "^8.4.14",
     "prettier": "^2.6.2",
+    "prisma": "^3.15.0",
     "tailwindcss": "^3.0.24",
     "tsconfig-paths": "^4.0.0",
     "typescript": "^4.6.4"
