--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@remix-run/react": "^1.5.1",
     "@remix-run/vercel": "^1.5.1",
     "@vercel/node": "^2.0.0",
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^8.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
@@ -24,6 +26,8 @@
     "@remix-run/dev": "^1.5.1",
     "@remix-run/eslint-config": "^1.5.1",
     "@remix-run/serve": "^1.5.1",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/react": "^17.0.45",
     "@types/react-dom": "^17.0.17",
     "@typescript-eslint/eslint-plugin": "^5.27.1",
