--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@remix-run/node": "^1.5.1",
     "@remix-run/react": "^1.5.1",
     "@remix-run/vercel": "^1.5.1",
+    "@sendgrid/mail": "^7.7.0",
     "@vercel/node": "^2.0.0",
     "bcryptjs": "^2.4.3",
+    "dotenv": "^16.0.1",
     "jsonwebtoken": "^8.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
