--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "dotenv": "^16.0.1",
     "jsonwebtoken": "^8.5.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "zod": "^3.17.3"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.5.1",
