--- a/package.json
+++ b/package.json
@@ -22,8 +22,12 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.1",
     "jsonwebtoken": "^8.5.1",
+    "quill": "^1.3.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-highlight": "^0.14.0",
+    "react-quilljs": "^1.2.17",
+    "remix-utils": "^3.3.0",
     "zod": "^3.17.3"
   },
   "devDependencies": {
