--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "react-dom": "^17.0.2",
     "react-highlight": "^0.14.0",
     "react-quilljs": "^1.2.17",
+    "reading-time": "^1.5.0",
     "remix-utils": "^3.3.0",
+    "slugify": "^1.6.5",
     "zod": "^3.17.3"
   },
   "devDependencies": {
