feat(blogs): implmented dynamic blog section using slug

--- a/package.json
+++ b/package.json
@@ -36,10 +36,12 @@
     "@remix-run/dev": "^1.5.1",
     "@remix-run/eslint-config": "^1.5.1",
     "@remix-run/serve": "^1.5.1",
+    "@tailwindcss/typography": "^0.5.2",
     "@types/bcryptjs": "^2.4.2",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/react": "^17.0.45",
     "@types/react-dom": "^17.0.17",
+    "@types/react-syntax-highlighter": "^15.5.2",
     "@typescript-eslint/eslint-plugin": "^5.27.1",
     "@typescript-eslint/parser": "^5.27.1",
     "airbnb": "^0.0.2",
