--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jsonwebtoken": "^8.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-messenger-customer-chat": "^0.8.0",
     "zod": "^3.17.3"
   },
   "devDependencies": {
