--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "format": "prettier --write 'src/**/*.{js,jsx,ts,tsx,md,json}' --config ./.prettierrc"
   },
   "dependencies": {
-    "@prisma/client": "^3.15.0",
+    "@prisma/client": "^3.15.1",
     "@reach/dialog": "^0.17.0",
     "@remix-run/node": "^1.5.1",
     "@remix-run/react": "^1.5.1",
@@ -27,6 +27,7 @@
     "react-dom": "^17.0.2",
     "react-highlight": "^0.14.0",
     "react-quilljs": "^1.2.17",
+    "react-select": "^5.3.2",
     "reading-time": "^1.5.0",
     "remix-utils": "^3.3.0",
     "slugify": "^1.6.5",
@@ -63,7 +64,7 @@
     "lint-staged": "^13.0.0",
     "postcss": "^8.4.14",
     "prettier": "^2.6.2",
-    "prisma": "^3.15.0",
+    "prisma": "^3.15.1",
     "tailwindcss": "^3.0.24",
     "tsconfig-paths": "^4.0.0",
     "typescript": "^4.6.4"
