--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@vercel/node": "^2.0.0",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.1",
+    "framer-motion": "^5.6.0",
     "jsonwebtoken": "^8.5.1",
     "quill": "^1.3.7",
     "react": "^17.0.2",
@@ -30,8 +31,10 @@
     "react-quilljs": "^1.2.17",
     "react-select": "^5.3.2",
     "reading-time": "^1.5.0",
+    "remix-image": "^0.3.18",
     "remix-utils": "^3.3.0",
     "slugify": "^1.6.5",
+    "spin-delay": "^1.2.0",
     "zod": "^3.17.3"
   },
   "devDependencies": {
