--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^16.0.1",
     "framer-motion": "^5.6.0",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.3",
     "quill": "^1.3.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
