feat: 🎸 Adding about page
Adding about page

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,8 +2,10 @@
   "css.validate": false,
   "tailwindCSS.emmetCompletions": true,
   "cSpell.words": [
+    "Hossain",
     "rakib",
     "SENDGRID",
+    "Tanvir",
     "webp"
   ]
 }
