--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "reading-time": "^1.5.0",
     "remix-image": "^0.3.18",
     "remix-utils": "^3.3.0",
+    "sib-api-v3-sdk": "^8.4.0",
     "slugify": "^1.6.5",
     "spin-delay": "^1.2.0",
     "zod": "^3.17.3"
