--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "remix-utils": "^3.3.0",
     "sib-api-v3-sdk": "^8.4.0",
     "slugify": "^1.6.5",
+    "socket.io-client": "^4.5.1",
     "spin-delay": "^1.2.0",
     "zod": "^3.17.3"
   },
