--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "framer-motion": "^5.6.0",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.3",
+    "npm": "^9.7.1",
     "quill": "^1.3.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -78,7 +79,7 @@
     "typescript": "^4.6.4"
   },
   "engines": {
-    "node": ">=14",
+    "node": ">=18",
     "npm": ">=8",
     "yarn": "please use npm"
   },
